Use the Eclipse Junit5 runner